--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,9 @@
     "moduleResolution": "node",
     "target": "es2017",
     "incremental": true,
-    "allowJs": true,
+    "allowJs": false,
     "strict": true,
+    "skipLibCheck": true,
     "resolveJsonModule": true,
     "preserveConstEnums": true,
     "noErrorTruncation": true,
