--- a/package.json
+++ b/package.json
@@ -22,12 +22,22 @@
     "@storybook/addon-actions": "6.3.8",
     "@storybook/addon-essentials": "6.3.8",
     "@storybook/addon-links": "6.3.8",
+    "@storybook/builder-webpack5": "6.3.8",
     "@storybook/html": "6.3.8",
+    "@storybook/manager-webpack5": "6.3.8",
+    "autoprefixer": "10.3.5",
     "babel-loader": "8.2.2",
     "babel-plugin-polyfill-corejs3": "0.2.4",
     "babel-preset-solid": "1.1.5",
     "clean-webpack-plugin": "4.0.0",
+    "css-loader": "6.3.0",
+    "css-minimizer-webpack-plugin": "3.0.2",
     "html-webpack-plugin": "5.3.2",
+    "mini-css-extract-plugin": "2.3.0",
+    "postcss": "8.3.7",
+    "postcss-loader": "6.1.1",
+    "postcss-nesting": "8.0.1",
+    "style-loader": "3.3.0",
     "ts-loader": "9.2.6",
     "typescript": "4.4.3",
     "webpack": "5.53.0",
