Config ESLint & StyleLint

--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "private": true,
   "sideEffects": false,
   "scripts": {
+    "lint:ts": "eslint --ext .ts,.tsx src/ --cache --max-warnings 0",
+    "lint:css": "stylelint --cache \"src/**/*.css\"",
+    "lint": "npm run lint:ts && npm run lint:css",
     "build": "webpack --mode production",
     "analyze": "webpack --mode production --env analyzer=default",
     "start": "webpack-dev-server --mode development --open --hot",
@@ -25,6 +28,8 @@
     "@storybook/builder-webpack5": "6.3.8",
     "@storybook/html": "6.3.8",
     "@storybook/manager-webpack5": "6.3.8",
+    "@typescript-eslint/eslint-plugin": "4.31.2",
+    "@typescript-eslint/parser": "4.31.2",
     "autoprefixer": "10.3.5",
     "babel-loader": "8.2.2",
     "babel-plugin-polyfill-corejs3": "0.2.4",
@@ -32,12 +37,18 @@
     "clean-webpack-plugin": "4.0.0",
     "css-loader": "6.3.0",
     "css-minimizer-webpack-plugin": "3.0.2",
+    "eslint": "7.32.0",
+    "eslint-import-resolver-typescript": "2.5.0",
+    "eslint-plugin-css-modules": "2.11.0",
+    "eslint-plugin-solid": "0.1.2",
     "html-webpack-plugin": "5.3.2",
     "mini-css-extract-plugin": "2.3.0",
     "postcss": "8.3.7",
     "postcss-loader": "6.1.1",
     "postcss-nesting": "8.0.1",
     "style-loader": "3.3.0",
+    "stylelint": "13.13.1",
+    "stylelint-order": "4.1.0",
     "ts-loader": "9.2.6",
     "typescript": "4.4.3",
     "webpack": "5.53.0",
