--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "private": true,
   "sideEffects": false,
   "scripts": {
+    "prepare": "husky install",
     "lint:ts": "eslint --ext .ts,.tsx src/ --cache --max-warnings 0",
     "lint:css": "stylelint --cache \"src/**/*.css\"",
     "lint": "npm run lint:ts && npm run lint:css",
@@ -43,10 +44,13 @@
     "eslint-plugin-solid": "0.1.2",
     "fork-ts-checker-webpack-plugin": "6.3.3",
     "html-webpack-plugin": "5.3.2",
+    "husky": "7.0.2",
+    "lint-staged": "11.1.2",
     "mini-css-extract-plugin": "2.3.0",
     "postcss": "8.3.7",
     "postcss-loader": "6.1.1",
     "postcss-nesting": "8.0.1",
+    "prettier": "2.2.1",
     "style-loader": "3.3.0",
     "stylelint": "13.13.1",
     "stylelint-order": "4.1.0",
@@ -65,5 +69,10 @@
     "Opera >= 62",
     "Edge >= 79",
     "Samsung >= 12"
-  ]
+  ],
+  "lint-staged": {
+    "src/**/*.{ts,tsx}": "eslint --cache --fix",
+    "src/**/*.css": "stylelint --fix",
+    "*.{js,ts,tsx,json,css,html}": "prettier --write"
+  }
 }
