--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "dependencies": {
     "core-js": "3.18.1",
-    "solid-create-form": "0.2.0",
+    "solid-create-form": "0.2.1",
     "solid-js": "1.1.5"
   },
   "devDependencies": {
@@ -32,6 +32,7 @@
     "@storybook/manager-webpack5": "6.3.8",
     "@typescript-eslint/eslint-plugin": "4.31.2",
     "@typescript-eslint/parser": "4.31.2",
+    "@vue/preload-webpack-plugin": "2.0.0",
     "autoprefixer": "10.3.6",
     "babel-loader": "8.2.2",
     "babel-plugin-polyfill-corejs3": "0.2.5",
