--- a/package.json
+++ b/package.json
@@ -19,39 +19,40 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "core-js": "3.18.1",
-    "solid-app-router": "0.1.7",
+    "core-js": "3.18.2",
+    "solid-app-router": "0.1.9",
     "solid-create-form": "0.3.0",
-    "solid-js": "1.1.5"
+    "solid-js": "1.1.6"
   },
   "devDependencies": {
     "@prettier/plugin-xml": "1.1.0",
-    "@storybook/addon-actions": "6.3.8",
-    "@storybook/addon-essentials": "6.3.8",
-    "@storybook/addon-links": "6.3.8",
-    "@storybook/builder-webpack5": "6.3.8",
-    "@storybook/html": "6.3.8",
-    "@storybook/manager-webpack5": "6.3.8",
-    "@typescript-eslint/eslint-plugin": "4.31.2",
-    "@typescript-eslint/parser": "4.31.2",
+    "@storybook/addon-actions": "6.3.10",
+    "@storybook/addon-essentials": "6.3.10",
+    "@storybook/addon-links": "6.3.10",
+    "@storybook/builder-webpack5": "6.3.10",
+    "@storybook/html": "6.3.10",
+    "@storybook/manager-webpack5": "6.3.10",
+    "@typescript-eslint/eslint-plugin": "4.33.0",
+    "@typescript-eslint/parser": "4.33.0",
     "@vue/preload-webpack-plugin": "2.0.0",
-    "autoprefixer": "10.3.6",
+    "autoprefixer": "10.3.7",
     "babel-loader": "8.2.2",
     "babel-plugin-polyfill-corejs3": "0.2.5",
     "babel-preset-solid": "1.1.5",
     "clean-webpack-plugin": "4.0.0",
-    "css-loader": "6.3.0",
-    "css-minimizer-webpack-plugin": "3.0.2",
+    "css-loader": "6.4.0",
+    "css-minimizer-webpack-plugin": "3.1.1",
     "eslint": "7.32.0",
     "eslint-import-resolver-typescript": "2.5.0",
     "eslint-plugin-css-modules": "2.11.0",
     "eslint-plugin-solid": "0.1.2",
-    "fork-ts-checker-webpack-plugin": "6.3.3",
+    "fork-ts-checker-webpack-plugin": "6.3.4",
     "html-webpack-plugin": "5.3.2",
     "husky": "7.0.2",
-    "lint-staged": "11.1.2",
-    "mini-css-extract-plugin": "2.3.0",
-    "postcss": "8.3.8",
+    "lint-staged": "11.2.3",
+    "mini-css-extract-plugin": "2.4.2",
+    "postcss": "8.3.9",
+    "postcss-custom-media": "8.0.0",
     "postcss-loader": "6.1.1",
     "postcss-nesting": "8.0.1",
     "prettier": "2.4.1",
@@ -60,10 +61,10 @@
     "stylelint-order": "4.1.0",
     "ts-loader": "9.2.6",
     "typescript": "4.4.3",
-    "webpack": "5.54.0",
+    "webpack": "5.58.1",
     "webpack-bundle-analyzer": "4.4.2",
-    "webpack-cli": "4.8.0",
-    "webpack-dev-server": "4.3.0"
+    "webpack-cli": "4.9.0",
+    "webpack-dev-server": "4.3.1"
   },
   "browserslist": [
     "Chrome >= 70",
