--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "clean-webpack-plugin": "4.0.0",
     "css-loader": "6.4.0",
     "css-minimizer-webpack-plugin": "3.1.1",
+    "dotenv": "10.0.0",
     "eslint": "7.32.0",
     "eslint-import-resolver-typescript": "2.5.0",
     "eslint-plugin-css-modules": "2.11.0",
