--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "core-js": "3.18.2",
+    "date-func": "0.0.3",
     "solid-app-router": "0.1.9",
     "solid-create-form": "0.3.0",
     "solid-js": "1.1.6"
