--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "date-func": "0.0.3",
     "solid-app-router": "0.1.9",
     "solid-create-form": "0.3.0",
+    "solid-i18n": "0.0.1",
     "solid-js": "1.1.6",
     "solid-use-script": "0.0.1"
   },
