--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "solid-create-form": "0.3.0",
     "solid-i18n": "0.0.1",
     "solid-js": "1.1.7",
+    "solid-transition-group": "0.0.8",
     "solid-use-script": "0.0.1"
   },
   "devDependencies": {
