--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "npm run lint:ts && npm run lint:css",
     "build": "webpack --mode production",
     "analyze": "webpack --mode production --env analyzer=default",
+    "statoscope": "webpack --mode production --env analyzer=statoscope",
     "start": "webpack-dev-server --mode development --open --hot",
     "sb": "start-storybook -p 6006",
     "sb:build": "build-storybook",
@@ -30,6 +31,7 @@
   },
   "devDependencies": {
     "@prettier/plugin-xml": "1.1.0",
+    "@statoscope/webpack-plugin": "5.19.0",
     "@storybook/addon-actions": "6.3.12",
     "@storybook/addon-essentials": "6.3.12",
     "@storybook/addon-links": "6.3.12",
