--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "eslint-plugin-css-modules": "2.11.0",
     "eslint-plugin-solid": "0.1.2",
     "fork-ts-checker-webpack-plugin": "6.5.0",
+    "glob": "7.2.0",
     "html-webpack-plugin": "5.5.0",
     "husky": "7.0.4",
     "mini-css-extract-plugin": "2.4.5",
