--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "core-js": "3.19.2",
     "date-func": "0.2.0",
     "micro-charts": "7.2.0",
+    "mixpanel-browser": "^2.42.0",
     "solid-app-router": "0.1.13",
     "solid-create-form": "1.0.0",
     "solid-i18n": "^1.0.0",
@@ -39,6 +40,7 @@
     "@storybook/builder-webpack5": "6.4.7",
     "@storybook/html": "6.4.7",
     "@storybook/manager-webpack5": "6.4.7",
+    "@types/mixpanel-browser": "^2.35.8",
     "@typescript-eslint/eslint-plugin": "5.5.0",
     "@typescript-eslint/parser": "5.5.0",
     "@vue/preload-webpack-plugin": "2.0.0",
