Added automatic type generation from Capital Core's openAPIs

--- a/package.json
+++ b/package.json
@@ -6,16 +6,16 @@
   "license": "ISC",
   "private": true,
   "scripts": {
-    "prepare": "husky install",
-    "lint:ts": "eslint --ext .ts,.tsx src/ --cache --max-warnings 0",
-    "lint:css": "stylelint --cache \"src/**/*.css\"",
-    "lint": "npm run lint:ts && npm run lint:css",
-    "build": "webpack --mode production",
     "analyze": "webpack --mode production --env analyzer=default",
-    "statoscope": "webpack --mode production --env analyzer=statoscope",
-    "start": "webpack-dev-server --mode development --open --hot",
-    "sb": "start-storybook -p 6006",
+    "build": "webpack --mode production",
+    "lint:css": "stylelint --cache \"src/**/*.css\"",
+    "lint:ts": "eslint --ext .ts,.tsx src/ --cache --max-warnings 0",
+    "lint": "npm run lint:ts && npm run lint:css",
+    "prepare": "husky install",
     "sb:build": "build-storybook",
+    "sb": "start-storybook -p 6006",
+    "start": "webpack-dev-server --mode development --open --hot",
+    "statoscope": "webpack --mode production --env analyzer=statoscope",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
@@ -70,6 +70,7 @@
     "style-loader": "3.3.1",
     "stylelint": "14.1.0",
     "stylelint-order": "5.0.0",
+    "swagger-typescript-api": "^9.3.1",
     "ts-loader": "9.2.6",
     "typescript": "4.5.2",
     "webpack": "5.64.4",
