--- a/package.json
+++ b/package.json
@@ -20,50 +20,50 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@alloyidentity/web-sdk": "^0.2.7",
-    "core-js": "3.19.2",
+    "@alloyidentity/web-sdk": "0.2.7",
+    "core-js": "3.19.3",
     "date-func": "0.2.0",
     "micro-charts": "7.2.0",
     "mixpanel-browser": "^2.42.0",
-    "solid-app-router": "0.1.13",
+    "solid-app-router": "0.1.14",
     "solid-create-form": "1.0.0",
-    "solid-i18n": "^1.0.0",
-    "solid-js": "1.2.5",
+    "solid-i18n": "1.0.0",
+    "solid-js": "1.2.6",
     "solid-transition-group": "0.0.8",
     "solid-use-script": "0.0.1"
   },
   "devDependencies": {
     "@prettier/plugin-xml": "1.1.0",
-    "@statoscope/webpack-plugin": "5.19.0",
-    "@storybook/addon-actions": "6.4.7",
-    "@storybook/addon-essentials": "6.4.7",
-    "@storybook/addon-links": "6.4.7",
-    "@storybook/builder-webpack5": "6.4.7",
-    "@storybook/html": "6.4.7",
-    "@storybook/manager-webpack5": "6.4.7",
+    "@statoscope/webpack-plugin": "5.19.1",
+    "@storybook/addon-actions": "6.4.9",
+    "@storybook/addon-essentials": "6.4.9",
+    "@storybook/addon-links": "6.4.9",
+    "@storybook/builder-webpack5": "6.4.9",
+    "@storybook/html": "6.4.9",
+    "@storybook/manager-webpack5": "6.4.9",
     "@types/mixpanel-browser": "^2.35.8",
-    "@typescript-eslint/eslint-plugin": "5.5.0",
-    "@typescript-eslint/parser": "5.5.0",
+    "@typescript-eslint/eslint-plugin": "5.6.0",
+    "@typescript-eslint/parser": "5.6.0",
     "@vue/preload-webpack-plugin": "2.0.0",
     "autoprefixer": "10.4.0",
     "babel-loader": "8.2.3",
     "babel-plugin-polyfill-corejs3": "0.4.0",
-    "babel-preset-solid": "1.2.5",
+    "babel-preset-solid": "1.2.6",
     "clean-webpack-plugin": "4.0.0",
     "css-loader": "6.5.1",
     "css-minimizer-webpack-plugin": "3.2.0",
     "dotenv": "10.0.0",
-    "eslint": "8.4.0",
+    "eslint": "8.4.1",
     "eslint-import-resolver-typescript": "2.5.0",
     "eslint-plugin-css-modules": "2.11.0",
-    "eslint-plugin-solid": "0.1.2",
+    "eslint-plugin-solid": "0.3.0",
     "fork-ts-checker-webpack-plugin": "6.5.0",
     "glob": "7.2.0",
     "html-webpack-plugin": "5.5.0",
     "husky": "7.0.4",
     "mini-css-extract-plugin": "2.4.5",
-    "nano-staged": "0.4.1",
-    "postcss": "8.4.4",
+    "nano-staged": "0.4.5",
+    "postcss": "8.4.5",
     "postcss-custom-media": "8.0.0",
     "postcss-loader": "6.2.1",
     "postcss-nesting": "10.0.2",
@@ -71,10 +71,10 @@
     "style-loader": "3.3.1",
     "stylelint": "14.1.0",
     "stylelint-order": "5.0.0",
-    "swagger-typescript-api": "^9.3.1",
+    "swagger-typescript-api": "9.3.1",
     "ts-loader": "9.2.6",
-    "typescript": "4.5.2",
-    "webpack": "5.64.4",
+    "typescript": "4.5.3",
+    "webpack": "5.65.0",
     "webpack-bundle-analyzer": "4.5.0",
     "webpack-cli": "4.9.1",
     "webpack-dev-server": "4.6.0"
