--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@alloyidentity/web-sdk": "0.2.7",
+    "@solid-primitives/debounce": "^1.0.8",
     "core-js": "3.19.3",
     "date-func": "0.2.0",
     "micro-charts": "7.2.0",
