--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@alloyidentity/web-sdk": "0.2.7",
     "@solid-primitives/debounce": "^1.0.8",
+    "axios": "^0.24.0",
     "colord": "2.9.2",
     "core-js": "3.20.0",
     "date-func": "0.2.0",
