--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "babel-preset-solid": "1.3.5",
     "circular-dependency-plugin": "5.2.2",
     "clean-webpack-plugin": "4.0.0",
+    "copy-webpack-plugin": "10.2.4",
     "css-loader": "6.6.0",
     "css-minimizer-webpack-plugin": "3.4.1",
     "dotenv": "15.0.0",
