Add separate DEV and QA deployment environments for environment variables and pipeline configuration

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -23,6 +23,7 @@ pipelines:
     - step:
         name: Deploy image to GKE
         image: google/cloud-sdk:latest
+        deployment: DEV
         runs-on:
           - 'env.dev'
         script:
@@ -36,7 +37,7 @@ pipelines:
       - step:
           name: Deploy image to QA
           image: google/cloud-sdk:latest
-          deployment: staging
+          deployment: QA
           runs-on:
             - 'env.qa'
           script:
