Increase limits due to build requirements

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -9,6 +9,7 @@ pipelines:
     - step:
         name: Build image and push to GCR
         image: google/cloud-sdk:latest
+        size: 2x
         artifacts:
           - dist/*
         services:
